# agent-readiness-action

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  action.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
tests/test-good-repo/: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml
tests/test-good-repo/src/good/: cli.py
tests/test-good-repo/tests/: test_cli.py
